kind added in all test files
Signed-off-by: Sonu Kumar Kushwaha <sksonukushwaha403@gmail.com>

--- a/best-practices/disallow_default_namespace/test.yaml
+++ b/best-practices/disallow_default_namespace/test.yaml
@@ -7,8 +7,10 @@ results:
   - policy: disallow-default-namespace
     rule: require-namespace
     resource: myapp-pod
+    kind: Pod
     result: pass
   - policy: disallow-default-namespace
     rule: validate-namespace
     resource: myapp-pod
+    kind: Pod
     result: fail
