--- a/best-practices/require_drop_all/test.yaml
+++ b/best-practices/require_drop_all/test.yaml
@@ -7,4 +7,5 @@ results:
   - policy: drop-all-capabilities
     rule: check-containers
     resource:  add-capabilities
+    kind: Pod
     result: fail
