--- a/pod-security/restricted/restrict-volume-types/test.yaml
+++ b/pod-security/restricted/restrict-volume-types/test.yaml
@@ -7,8 +7,10 @@ results:
   - policy: restrict-volume-types
     rule: restricted-vol-gcePersistentDisk
     resource: gce-pd
+    kind: Pod
     result: fail
   - policy: restrict-volume-types
     rule: restricted-vol-awsElasticBlockStore
     resource: gce-pd
+    kind: Pod
     result: pass
