--- a/best-practices/disallow_cri_sock_mount/test.yaml
+++ b/best-practices/disallow_cri_sock_mount/test.yaml
@@ -7,12 +7,15 @@ results:
   - policy: disallow-container-sock-mounts
     rule: validate-docker-sock-mount
     resource: pod-with-docker-sock-mount
+    kind: Pod
     result: fail
   - policy: disallow-container-sock-mounts
     rule: validate-containerd-sock-mount
     resource: pod-with-docker-sock-mount
+    kind: Pod
     result: pass
   - policy: disallow-container-sock-mounts
     rule: validate-crio-sock-mount
     resource: pod-with-docker-sock-mount
+    kind: Pod
     result: pass
