--- a/best-practices/disallow_latest_tag/test.yaml
+++ b/best-practices/disallow_latest_tag/test.yaml
@@ -7,8 +7,10 @@ results:
   - policy: disallow-latest-tag
     rule: require-image-tag
     resource: myapp-pod
+    kind: Pod
     result: pass
   - policy: disallow-latest-tag
     rule: validate-image-tag
     resource: myapp-pod
+    kind: Pod
     result: pass
