--- a/cert-manager/limit-dnsnames/test.yaml
+++ b/cert-manager/limit-dnsnames/test.yaml
@@ -7,8 +7,10 @@ results:
   - policy: cert-manager-limit-dnsnames
     rule: limit-dnsnames
     resource: letsencrypt-crt
+    kind: Certificate
     result: fail
   - policy: cert-manager-limit-dnsnames
     rule: limit-dnsnames
     resource: acme-crt
+    kind: Certificate
     result: pass
