--- a/other/disallow_localhost_services/test.yaml
+++ b/other/disallow_localhost_services/test.yaml
@@ -7,8 +7,10 @@ results:
   - policy: no-localhost-service
     rule: no-localhost-service
     resource: my-service
+    kind: Service
     result: fail
   - policy: no-localhost-service
     rule: no-localhost-service
     resource: my-np-service
+    kind: Service
     result: pass
