--- a/pod-security/restricted/require-non-root-groups/test.yaml
+++ b/pod-security/restricted/require-non-root-groups/test.yaml
@@ -7,25 +7,31 @@ results:
   - policy: require-non-root-groups
     rule: check-runasgroup
     resource: fs-group0
+    kind: Pod
     result: pass
   - policy: require-non-root-groups
     rule: check-supplementalGroups
     resource: fs-group0
+    kind: Pod
     result: pass
   - policy: require-non-root-groups
     rule:  check-fsGroup
     resource: fs-group0
+    kind: Pod
     result: fail
   - policy: require-non-root-groups
     rule: check-supplementalGroups
     resource: supplemental-groups0
+    kind: Pod
     result: fail
   - policy: require-non-root-groups
     rule: check-fsGroup
     resource: supplemental-groups0
+    kind: Pod
     result: pass
   - policy: require-non-root-groups
     rule: check-runasgroup
     resource: supplemental-groups0
+    kind: Pod
     result: pass
 
