Removed another policy and also added case for skip
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/inject_sidecar_deployment/patchedResource2.yaml
+++ b/other/inject_sidecar_deployment/patchedResource2.yaml
@@ -12,6 +12,8 @@ spec:
     metadata:
       labels:
         app: myapp
+      annotations:
+        vault.hashicorp.com/agent-inject: "false" 
     spec:
       containers:
       - image: vault:1.5.4
