--- a/other/inject_sidecar_deployment/resource.yaml
+++ b/other/inject_sidecar_deployment/resource.yaml
@@ -32,6 +32,8 @@ spec:
     metadata:
       labels:
         app: myapp
+      annotations:
+        vault.hashicorp.com/agent-inject: "false" 
     spec:
       containers:
       - image: nginx:latest
