--- a/other/inject_sidecar_deployment/test.yaml
+++ b/other/inject_sidecar_deployment/test.yaml
@@ -9,22 +9,10 @@ results:
     resource: mydeploy-1
     patchedResource: patchedResource1.yaml
     kind: Deployment
-    status: pass
+    result: pass
   - policy: inject-sidecar
     rule: inject-sidecar
     resource: mydeploy-2
     patchedResource: patchedResource2.yaml
     kind: Deployment
-    status: pass
-  - policy: inject-sidecar-1
-    rule: inject-sidecar
-    resource: mydeploy-1
-    patchedResource: patchedResource1.yaml
-    kind: Deployment
-    status: pass
-  - policy: inject-sidecar-1
-    rule: inject-sidecar
-    resource: mydeploy-2
-    patchedResource: patchedResource2.yaml
-    kind: Deployment
-    status: skip
+    result: skip
