Added more skip test-cases
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/always-pull-images/test.yaml
+++ b/other/always-pull-images/test.yaml
@@ -6,7 +6,13 @@ resources:
 results:
   - policy: always-pull-images
     rule: always-pull-images
-    resource: myapp-pod
-    patchedResource: patchedResource.yaml
+    resource: myapp-pod-1
+    patchedResource: patchedResource1.yaml
     kind: Pod
     result: pass
+  - policy: always-pull-images
+    rule: always-pull-images
+    resource: myapp-pod-2
+    patchedResource: patchedResource2.yaml
+    kind: Pod
+    result: skip
