--- a/other/add-imagepullsecrets/resource.yaml
+++ b/other/add-imagepullsecrets/resource.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: myapp-pod
+  name: myapp-pod-1
 spec:
   containers:
   - name: nginx
@@ -11,8 +11,20 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: myapp-pod-1
+  name: myapp-pod-2
 spec:
   containers:
   - name: nginx
     image: nginx:latest
+
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: myapp-pod-3
+spec:
+  containers:
+  - name: nginx
+    image: corp.reg.com/nginx:latest
+  imagePullSecrets:
+  - name: my-secret
