--- a/other/add-pod-proxies/test.yaml
+++ b/other/add-pod-proxies/test.yaml
@@ -6,7 +6,13 @@ resources:
 results:
   - policy: add-pod-proxies
     rule: add-pod-proxies
-    resource: myapp-pod
-    patchedResource: patchedResource.yaml
+    resource: myapp-pod-1
+    patchedResource: patchedResource1.yaml
     kind: Pod
     result: pass
+  - policy: add-pod-proxies
+    rule: add-pod-proxies
+    resource: myapp-pod-2
+    patchedResource: patchedResource2.yaml
+    kind: Pod
+    result: skip
