--- a/other/always-pull-images/patchedResource2.yaml
+++ b/other/always-pull-images/patchedResource2.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: myapp-pod-2
+  labels:
+    foo: bar
 spec:
   containers:
-  - name: nginx
+  - name: ""
     image: nginx:latest
-  imagePullSecrets:
-  - name: my-secret
+    imagePullPolicy: Always
