--- a/other/create_pod_antiaffinity/test.yaml
+++ b/other/create_pod_antiaffinity/test.yaml
@@ -7,6 +7,12 @@ results:
   - policy: insert-pod-antiaffinity
     rule: insert-pod-antiaffinity
     resource: mydeploy
-    patchedResource: patchedResource.yaml
+    patchedResource: patchedResource1.yaml
     kind: Deployment
     result: pass
+  - policy: insert-pod-antiaffinity
+    rule: insert-pod-antiaffinity
+    resource: myapp-pod
+    patchedResource: patchedResource2.yaml
+    kind: Pod
+    result: skip
