Added more test cases on auto-gen features
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/imagepullpolicy-always/test.yaml
+++ b/other/imagepullpolicy-always/test.yaml
@@ -8,11 +8,19 @@ results:
     rule: imagepullpolicy-always
     resource: myapp-pod-1
     kind: Pod
-    namespace: default
     result: pass
   - policy: imagepullpolicy-always
     rule: imagepullpolicy-always
     resource: myapp-pod-2
     kind: Pod
-    namespace: default
     result: fail
+  - policy: imagepullpolicy-always
+    rule: imagepullpolicy-always
+    resource: mydeploy1
+    kind: Deployment
+    result: fail
+  - policy: imagepullpolicy-always
+    rule: imagepullpolicy-always
+    resource: mydeploy2
+    kind: Deployment
+    result: pass
