--- a/other/imagepullpolicy-always/resource.yaml
+++ b/other/imagepullpolicy-always/resource.yaml
@@ -21,3 +21,46 @@ spec:
   containers:
   - name: nginx
     image: nginx:latest
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mydeploy1
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: myapp
+  template:
+    metadata:
+      labels:
+        app: myapp
+    spec:
+      containers:
+      - name: nginx
+        image: nginx
+        ports:
+        - containerPort: 80
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mydeploy2
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: myapp
+  template:
+    metadata:
+      labels:
+        app: myapp
+    spec:
+      containers:
+      - name: nginx
+        image: nginx
+        imagePullPolicy: "Always"
+        ports:
+        - containerPort: 80
