--- a/other/require_deployments_have_multiple_replicas/resource.yaml
+++ b/other/require_deployments_have_multiple_replicas/resource.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp-deployment
+  name: mydeploy
 spec:
   replicas: 2
   selector:
@@ -17,3 +17,15 @@ spec:
         image: nginx
         ports:
         - containerPort: 80
+
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  labels:
+    foo: bar
+  name: myapp-pod
+spec:
+  containers:
+  - image: nginx
+    name: nginx
