--- a/other/restrict_automount_sa_token/resource.yaml
+++ b/other/restrict_automount_sa_token/resource.yaml
@@ -9,3 +9,25 @@ spec:
   - image: nginx
     name: nginx
   automountServiceAccountToken: false 
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mydeploy
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: myapp
+  template:
+    metadata:
+      labels:
+        app: myapp
+    spec:
+      containers:
+      - name: nginx
+        image: nginx
+        ports:
+        - containerPort: 80
+      automountServiceAccountToken: true
