--- a/best-practices/add_safe_to_evict.yaml
+++ b/best-practices/add_safe_to_evict.yaml
@@ -3,15 +3,14 @@ kind: ClusterPolicy
 metadata:
   name: add-safe-to-evict
   annotations:
-    policies.kyverno.io/title: Add safe-to-evict
-    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/category: Workload Management
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/description: >-
-      The Kubernetes cluster autoscaler does not evict pods that use hostPath
-      or emptyDir volumes. To allow eviction of these pods, the annotation
-      cluster-autoscaler.kubernetes.io/safe-to-evict=true must be added to pods.
-spec:
-  rules:
+    policies.kyverno.io/minversion: 1.4.3
+    policies.kyverno.io/description: The Kubernetes cluster autoscaler does not evict pods that 
+      use hostPath or emptyDir volumes. To allow eviction of these pods, the annotation 
+      cluster-autoscaler.kubernetes.io/safe-to-evict=true must be added to the pods. 
+spec: 
+  rules: 
   - name: annotate-empty-dir
     match:
       resources:
@@ -22,9 +21,9 @@ spec:
         metadata:
           annotations:
             +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
-        spec:
-          volumes:
-          - (emptyDir): {}
+        spec:          
+          volumes: 
+          - <(emptyDir): {}
   - name: annotate-host-path
     match:
       resources:
@@ -35,7 +34,7 @@ spec:
         metadata:
           annotations:
             +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
-        spec:
-          volumes:
-          - (hostPath):
-              path: "*"
+        spec:          
+          volumes: 
+          - hostPath:
+              <(path): "*"
