update require_drop_all for 1.4.3
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/require_drop_all/require_drop_all.yaml
+++ b/best-practices/require_drop_all/require_drop_all.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Drop All Capabilities
     policies.kyverno.io/category: Best Practices
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/minversion: 1.4.3
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Capabilities permit privileged actions without giving full root access. All 
@@ -24,13 +25,10 @@ spec:
       message: >-
         All capabilities should be dropped with only those required added back. Drop `ALL` must be
         specified in all caps.
-      pattern:
-        spec:
-          containers:
-          - securityContext:
-              capabilities:
-                drop: ["ALL"]
-          =(initContainers):
-          - securityContext:
-              capabilities:
-                drop: ["ALL"]
+      deny:
+        conditions:
+        # Get all the entries in each initContainers and containers drop[] array and ensures that every instance contains ALL. If not, deny the request.
+        # backticks around false statement (in the key) implies a JSON object and so the value must not be in quotes or is interpreted as a string.
+        - key: "{{request.object.spec.[containers, initContainers][].securityContext.capabilities.drop.contains(@, 'ALL') | !contains(@, `false`)}}"
+          operator: Equals
+          value: false
