created  issue template and enabled welcome bot
Signed-off-by: Anita-ihuman <charlesanita403@gmail.com>

--- a/best-practices/disallow-empty-ingress-host/test.yaml
+++ b/best-practices/disallow-empty-ingress-host/test.yaml
@@ -8,7 +8,9 @@ results:
     rule: disallow-empty-ingress-host
     resource: ingress-wildcard-host
     result: pass
+    kind: Pod
   - policy: disallow-empty-ingress-host
     rule: disallow-empty-ingress-host
     resource: minimal-ingress
     result: fail
+    kind: Pod
