require_drop_all background to false
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/require_drop_all/require_drop_all.yaml
+++ b/best-practices/require_drop_all/require_drop_all.yaml
@@ -15,7 +15,7 @@ metadata:
       ability.
 spec:
   validationFailureAction: audit
-  background: true
+  background: false
   rules:
   - name: check-containers
     match:
