--- a/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
+++ b/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
@@ -8,12 +8,14 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      Kubernetes automatically mounts ServiceAccount credentials in each Pod. 
+      Kubernetes automatically mounts ServiceAccount credentials in each Pod.
       The ServiceAccount may be assigned roles allowing Pods to access API resources.
       Blocking this ability is an extension of the least privilege best practice and should
-      be followed if Pods do not need to speak to the API server to function. 
+      be followed if Pods do not need to speak to the API server to function.
       This policy ensures that mounting of these ServiceAccount tokens is blocked.
 spec:
+  validationFailureAction: audit
+  background: true
   rules:
   - name: validate-automountServiceAccountToken
     match:
