--- a/other/restrict_controlplane_scheduling/restrict_controlplane_scheduling.yaml
+++ b/other/restrict_controlplane_scheduling/restrict_controlplane_scheduling.yaml
@@ -11,10 +11,10 @@ metadata:
       because it takes away resources from the control plane components and can represent
       a possible security threat vector. This policy prevents users from setting a toleration
       in a Pod spec which allows running on control plane nodes
-      with the taint key `node-role.kubernetes.io/master`.   
+      with the taint key `node-role.kubernetes.io/master`.
 spec:
   validationFailureAction: audit
-  background: false
+  background: true
   rules:
   - name: restrict-controlplane-scheduling-master
     match:
