--- a/other/restrict_ingress_classes/restrict_ingress_classes.yaml
+++ b/other/restrict_ingress_classes/restrict_ingress_classes.yaml
@@ -15,6 +15,8 @@ metadata:
       annotation. This annotation has largely been replaced as of Kubernetes 1.18 with the IngressClass
       resource.
 spec:
+  validationFailureAction: audit
+  background: true
   rules:
   - name: validate-ingress
     match:
