--- a/other/restrict_ingress_host/restrict_ingress_host.yaml
+++ b/other/restrict_ingress_host/restrict_ingress_host.yaml
@@ -12,11 +12,12 @@ metadata:
       An Ingress host is a URL at which services may be made available externally. In most cases,
       these hosts should be unique across the cluster to ensure no routing conflicts occur.
       This policy checks an incoming Ingress resource to ensure its hosts are unique to the cluster.
+      It also ensures that only a single host may be specified in a given manifest.
 spec:
   validationFailureAction: audit
   background: false
   rules:
-    - name: check-host
+    - name: check-single-host
       match:
         resources:
           kinds:
@@ -31,10 +32,25 @@ spec:
         - key: "{{ request.operation }}"
           operator: Equals
           value: CREATE
+        - key: "{{ request.object.spec.rules[].host }}"
+          operator: In
+          value: "{{ hosts }}"
       validate:
         message: "The Ingress host name must be unique."
-        deny: 
-          conditions: 
-            - key: "{{ request.object.spec.rules[].host }}"
-              operator: In
-              value: "{{ hosts }}"
+        deny: {}
+    - name: deny-multiple-hosts
+      match:
+        resources:
+          kinds:
+            - Ingress
+      preconditions:
+        all:
+        - key: "{{ request.operation }}"
+          operator: Equals
+          value: CREATE
+        - key: "{{ request.object.spec.rules[].host | length(@)}}"
+          operator: GreaterThan
+          value: 1
+      validate:
+        message: "An Ingress resource may only contain a single host entry."
+        deny: {}
