--- a/other/restrict_node_selection/restrict_node_selection.yaml
+++ b/other/restrict_node_selection/restrict_node_selection.yaml
@@ -11,10 +11,10 @@ metadata:
       for new Pods. Users who have access to set certain fields in a Pod spec
       may sidestep this logic which in many cases is undesirable. This policy
       prevents users from targeting specific Nodes for scheduling of Pods by
-      prohibiting the use of the `nodeSelector` and `nodeName` fields.     
+      prohibiting the use of the `nodeSelector` and `nodeName` fields.
 spec:
   validationFailureAction: audit
-  background: false
+  background: true
   rules:
   - name: restrict-nodeselector
     match:
