--- a/other/restrict_ingress_host/resource.yaml
+++ b/other/restrict_ingress_host/resource.yaml
@@ -32,6 +32,16 @@ spec:
             name: service2
             port:
               number: 80
+  - host: "foo.bar.com"
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/bar"
+        backend:
+          service:
+            name: service1
+            port:
+              number: 80
 
 
 
