--- a/other/add-imagepullsecrets-for-containers-and-initcontainers.yaml
+++ b/other/add-imagepullsecrets-for-containers-and-initcontainers.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Add imagePullSecrets for Containers and InitContainers
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod
+    policies.kyverno.io/minversion: 1.3.6
     policies.kyverno.io/description: >-
       Images coming from certain registries require authentication in order to pull them,
       and the kubelet uses this information in the form of an imagePullSecret to pull
