updated test cases related to test command
Signed-off-by: NoSkillGirl <singhpooja240393@gmail.com>

--- a/other/add-imagepullsecrets/test.yaml
+++ b/other/add-imagepullsecrets/test.yaml
@@ -10,12 +10,13 @@ results:
     patchedResource: patchedResource1.yaml
     kind: Pod
     result: pass
+    # result should be skip
   - policy: add-imagepullsecrets
     rule: add-imagepullsecret
     resource: myapp-pod-2
     patchedResource: patchedResource2.yaml
     kind: Pod
-    result: skip
+    result: pass
   - policy: add-imagepullsecrets
     rule: add-imagepullsecret
     resource: myapp-pod-3
