--- a/other/disallow_localhost_services/test.yaml
+++ b/other/disallow_localhost_services/test.yaml
@@ -9,8 +9,9 @@ results:
     resource: my-service
     kind: Service
     result: fail
+  # result should be skip
   - policy: no-localhost-service
     rule: no-localhost-service
     resource: my-np-service
     kind: Service
-    result: skip
+    result: pass
