updated no-localhost-service policy
Signed-off-by: NoSkillGirl <singhpooja240393@gmail.com>

--- a/other/disallow_localhost_services/test.yaml
+++ b/other/disallow_localhost_services/test.yaml
@@ -9,9 +9,8 @@ results:
     resource: my-service
     kind: Service
     result: fail
-  # result should be skip
   - policy: no-localhost-service
     rule: no-localhost-service
     resource: my-np-service
     kind: Service
-    result: pass
+    result: skip
