set background: false
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/replace_image_registry/replace_image_registry.yaml
+++ b/other/replace_image_registry/replace_image_registry.yaml
@@ -17,6 +17,7 @@ metadata:
       in the form 'image:tag' or 'registry.corp.com/image:tag' to be prefaced
       with `myregistry.corp.com/`.
 spec:
+  background: false
   rules:
     - name: replace-image-registry
       match:
