--- a/other/ensure_readonly_hostpath/ensure_readonly_hostpath.yaml
+++ b/other/ensure_readonly_hostpath/ensure_readonly_hostpath.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/minversion: 1.5.0
+    policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Pods which are allowed to mount hostPath volumes in read/write mode pose a security risk
       even if confined to a "safe" file system on the host and may escape those confines (see
