fix policy tests due to the behavior change of the variable substitution
Signed-off-by: ShutingZhao <shutting06@gmail.com>

--- a/cert-manager/limit-duration/test.yaml
+++ b/cert-manager/limit-duration/test.yaml
@@ -8,13 +8,13 @@ results:
     rule: certificate-duration-max-100days 
     resource: letsencrypt-crt
     kind: Certificate
-    result: pass
-  - policy: cert-manager-restrict-issuer
+    result: skip
+  - policy: cert-manager-limit-duration
     rule: certificate-duration-max-100days 
     resource: acme-crt-short
     kind: Certificate
     result: pass
-  - policy: cert-manager-restrict-issuer
+  - policy: cert-manager-limit-duration
     rule: certificate-duration-max-100days 
     resource: acme-crt-long
     kind: Certificate
