handle empty map
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/best-practices/nginx-custom-snippets/disallow-custom-snippets.yaml
+++ b/best-practices/nginx-custom-snippets/disallow-custom-snippets.yaml
@@ -23,7 +23,7 @@ spec:
       validate:
         message: "ingress-nginx allow-snippet-annotations must be set to false"
         pattern:
-          data:
+          =(data):
             =(allow-snippet-annotations) : "false"
     - name: check-ingress-annotations
       match:
