--- a/pod-security/restricted/restrict-seccomp/restrict-seccomp.yaml
+++ b/pod-security/restricted/restrict-seccomp/restrict-seccomp.yaml
@@ -8,10 +8,9 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      The runtime default seccomp profile must be required, or only specific
-      additional profiles should be allowed. This policy, requiring Kubernetes
-      v1.19 or later, ensures that only the `RuntimeDefault` or `Localhost` is
-      used as a `type` and that it is not unset.
+      The seccomp profile must not be explicitly set to Unconfined. This policy, 
+      requiring Kubernetes v1.19 or later, ensures that seccomp is not set or 
+      set to `RuntimeDefault` or `Localhost`.
 spec:
   background: true
   validationFailureAction: enforce
@@ -25,38 +24,24 @@ spec:
       message: >-
         Use of custom Seccomp profiles is disallowed. The fields
         spec.securityContext.seccompProfile.type,
-        spec.containers[*].securityContext.seccompProfile.type, and
-        spec.initContainers[*].securityContext.seccompProfile.type
-        must be set to `RuntimeDefault` or `Localhost`.
-      anyPattern:
-      - spec:
-          securityContext:
-            seccompProfile:
+        spec.containers[*].securityContext.seccompProfile.type,
+        spec.initContainers[*].securityContext.seccompProfile.type, and
+        spec.ephemeralContainers[*].securityContext.seccompProfile.type
+        must not be set, or set to `RuntimeDefault` or `Localhost`.
+      pattern:
+       spec:
+        =(securityContext):
+          =(seccompProfile):
+            type: "RuntimeDefault | Localhost"      
+        containers:
+        - =(securityContext):
+            =(seccompProfile):
               type: "RuntimeDefault | Localhost"
-      - spec:
-          containers:
-          - securityContext:
-              seccompProfile:
-                type: "RuntimeDefault | Localhost"
-  - name: restrict-seccomp-initcontainers
-    match:
-      resources:
-        kinds:
-        - Pod
-    validate:
-      message: >-
-        Use of custom Seccomp profiles is disallowed. The fields
-        spec.securityContext.seccompProfile.type,
-        spec.containers[*].securityContext.seccompProfile.type, and
-        spec.initContainers[*].securityContext.seccompProfile.type
-        must be set to `RuntimeDefault` or `Localhost`.
-      anyPattern:
-      - spec:
-          securityContext:
-            seccompProfile:
+        =(initContainers):
+        - =(securityContext):
+            =(seccompProfile):
               type: "RuntimeDefault | Localhost"
-      - spec:
-          =(initContainers):
-          - securityContext:
-              seccompProfile:
-                type: "RuntimeDefault | Localhost"
+        =(ephemeralContainers):
+        - =(securityContext):
+            =(seccompProfile):
+              type: "RuntimeDefault | Localhost"
