don't flatten the check for count of drop arrays
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/require_drop_cap_net_raw/require_drop_cap_net_raw.yaml
+++ b/best-practices/require_drop_cap_net_raw/require_drop_cap_net_raw.yaml
@@ -33,6 +33,6 @@ spec:
           - key: "{{request.object.spec.[containers, initContainers][].securityContext.capabilities.drop[].contains(@, 'CAP_NET_RAW') | !contains(@, `false`)}}"
             operator: Equals
             value: false
-          - key: "{{request.object.spec.[containers, initContainers][].securityContext.capabilities.drop[] | length(@) }}"
+          - key: "{{request.object.spec.[containers, initContainers][].securityContext.capabilities.drop | length(@) }}"
             operator: NotEquals
             value: "{{request.object.spec.[containers, initContainers][] | length(@) }}"
