--- a/best-practices/require_drop_cap_net_raw/require_drop_cap_net_raw.yaml
+++ b/best-practices/require_drop_cap_net_raw/require_drop_cap_net_raw.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Drop CAP_NET_RAW
     policies.kyverno.io/category: Best Practices
-    policies.kyverno.io/minversion: 1.4.3
+    policies.kyverno.io/minversion: 1.5.0
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
@@ -18,21 +18,61 @@ spec:
   validationFailureAction: audit
   background: false
   rules:
-  - name: drop-cap-net-raw
+  - name: drop-cap-net-raw-initcontainers
     match:
       resources:
         kinds:
         - Pod
+    preconditions:
+      all:
+      - key: "{{request.operation}}"
+        operator: In
+        value:
+        - CREATE
+        - UPDATE
+      # Check if initContainers even exist in the Pod.
+      - key: "{{ request.object.spec.initContainers[] | length(@) }}"
+        operator: GreaterThanOrEquals
+        value: 1
     validate:
       message: The capability CAP_NET_RAW must be explicitly dropped.
-      deny:
-        conditions:
-          any:
-          # Get all the entries in each initContainers and containers drop[] array and ensures that every instance contains CAP_NET_RAW. If not, deny the request.
-          # backticks around false statement (in the key) implies a JSON object and so the value must not be in quotes or is interpreted as a string.
-          - key: "{{request.object.spec.[containers, initContainers][].securityContext.capabilities.drop[].contains(@, 'CAP_NET_RAW') | !contains(@, `false`)}}"
-            operator: Equals
-            value: false
-          - key: "{{request.object.spec.[containers, initContainers][].securityContext.capabilities.drop | length(@) }}"
-            operator: NotEquals
-            value: "{{request.object.spec.[containers, initContainers][] | length(@) }}"
+      foreach:
+      - list: "request.object.spec.initContainers[].securityContext.capabilities"
+        deny:
+          conditions:
+            any:
+            # Loop over the `drop[]` array in each container looking for `CAP_NET_RAW` and deny if not found.
+            - key: "{{ element.drop  | contains(@, 'CAP_NET_RAW') }}"
+              operator: Equals
+              value: false
+            # Also deny if every container in the Pod doesn't specify the `drop[]` array (doesn't exist).
+            - key: "{{request.object.spec.initContainers[].securityContext.capabilities.drop | length(@) }}"
+              operator: NotEquals
+              value: "{{request.object.spec.initContainers[] | length(@) }}"
+  - name: drop-cap-net-raw-containers
+    match:
+      resources:
+        kinds:
+        - Pod
+    preconditions:
+      all:
+      - key: "{{request.operation}}"
+        operator: In
+        value:
+        - CREATE
+        - UPDATE
+    validate:
+      message: The capability CAP_NET_RAW must be explicitly dropped.
+      foreach:
+      - list: "request.object.spec.containers[].securityContext.capabilities"
+        deny:
+          conditions:
+            any:
+            # Loop over the `drop[]` array in each container looking for `CAP_NET_RAW` and deny if not found.
+            - key: "{{ element.drop  | contains(@, 'CAP_NET_RAW') }}"
+              operator: Equals
+              value: false
+            # Also deny if every container in the Pod doesn't specify the `drop[]` array (doesn't exist).
+            - key: "{{request.object.spec.containers[].securityContext.capabilities.drop | length(@) }}"
+              operator: NotEquals
+              value: "{{request.object.spec.containers[] | length(@) }}"
