fix misspelling "snippets" to "snippet"
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/nginx-custom-snippets/disallow-custom-snippets.yaml
+++ b/best-practices/nginx-custom-snippets/disallow-custom-snippets.yaml
@@ -35,4 +35,4 @@ spec:
         pattern:
           metadata:
             =(annotations):
-              X(*-snippets): "?*"
+              X(*-snippet): "?*"
