update "require drop all" to use similar processing
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/require_drop_all/require_drop_all.yaml
+++ b/best-practices/require_drop_all/require_drop_all.yaml
@@ -6,30 +6,113 @@ metadata:
     policies.kyverno.io/title: Drop All Capabilities
     policies.kyverno.io/category: Best Practices
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.4.3
+    policies.kyverno.io/minversion: 1.5.0
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Capabilities permit privileged actions without giving full root access. All
       capabilities should be dropped from a Pod, with only those required added back.
       This policy ensures that all containers explicitly specify the `drop: ["ALL"]`
-      ability.
+      ability.      
 spec:
   validationFailureAction: audit
   background: false
   rules:
-  - name: check-containers
+  # Checks initContainers and containers to ensure they all specify a securityContext.capabilities.drop section
+  - name: check-for-drop-initcontainers
     match:
       resources:
         kinds:
         - Pod
+    preconditions:
+      all:
+      - key: "{{request.operation}}"
+        operator: In
+        value:
+        - CREATE
+        - UPDATE
+      - key: "{{ request.object.spec.initContainers[] | length(@) }}"
+        operator: GreaterThanOrEquals
+        value: 1
     validate:
-      message: >-
-        All capabilities should be dropped with only those required added back. Drop `ALL` must be
-        specified in all caps.
+      message: All initContainers must specify the securityContext.capabilities.drop section.
       deny:
         conditions:
-        # Get all the entries in each initContainers and containers drop[] array and ensures that every instance contains ALL. If not, deny the request.
-        # backticks around false statement (in the key) implies a JSON object and so the value must not be in quotes or is interpreted as a string.
-        - key: "{{request.object.spec.[containers, initContainers][].securityContext.capabilities.drop.contains(@, 'ALL') | !contains(@, `false`)}}"
-          operator: Equals
-          value: false
+          any:
+          # Deny if every initContainer in the Pod doesn't specify the `drop[]` array (doesn't exist)
+          - key: "{{request.object.spec.initContainers[].securityContext.capabilities.drop | length(@) }}"
+            operator: NotEquals
+            value: "{{request.object.spec.initContainers[] | length(@) }}"
+  # Checks containers to ensure they all specify a securityContext.capabilities.drop section
+  - name: check-for-drop-containers
+    match:
+      resources:
+        kinds:
+        - Pod
+    preconditions:
+      all:
+      - key: "{{request.operation}}"
+        operator: In
+        value:
+        - CREATE
+        - UPDATE
+    validate:
+      message: All containers must specify the securityContext.capabilities.drop section.
+      deny:
+        conditions:
+          any:
+          # Deny if every container in the Pod doesn't specify the `drop[]` array (doesn't exist)
+          - key: "{{request.object.spec.containers[].securityContext.capabilities.drop | length(@) }}"
+            operator: NotEquals
+            value: "{{request.object.spec.containers[] | length(@) }}"
+  # Checks initContainers to ensure they drop ALL
+  - name: drop-all-initcontainers
+    match:
+      resources:
+        kinds:
+        - Pod
+    preconditions:
+      all:
+      - key: "{{request.operation}}"
+        operator: In
+        value:
+        - CREATE
+        - UPDATE
+      # Check if initContainers even exist in the Pod
+      - key: "{{ request.object.spec.initContainers[] | length(@) }}"
+        operator: GreaterThanOrEquals
+        value: 1
+    validate:
+      message: The capability ALL must be explicitly dropped.
+      foreach:
+      - list: "request.object.spec.initContainers[].securityContext.capabilities"
+        deny:
+          conditions:
+            any:
+            # Loop over the `drop[]` array in each container looking for `ALL` and deny if not found
+            - key: "{{ element.drop  | contains(@, 'ALL') }}"
+              operator: Equals
+              value: false
+  # Checks containers to ensure they drop ALL
+  - name: drop-all-containers
+    match:
+      resources:
+        kinds:
+        - Pod
+    preconditions:
+      all:
+      - key: "{{request.operation}}"
+        operator: In
+        value:
+        - CREATE
+        - UPDATE
+    validate:
+      message: The capability ALL must be explicitly dropped.
+      foreach:
+      - list: "request.object.spec.containers[].securityContext.capabilities"
+        deny:
+          conditions:
+            any:
+            # Loop over the `drop[]` array in each container looking for `ALL` and deny if not found
+            - key: "{{ element.drop  | contains(@, 'ALL') }}"
+              operator: Equals
+              value: false
