Update lifetime policy to remove deprecated Duration* operator
Signed-off-by: Trey Dockendorf <tdockendorf@osc.edu>

--- a/other/pod_lifetime_annotation/enforce_pod_duration.yaml
+++ b/other/pod_lifetime_annotation/enforce_pod_duration.yaml
@@ -25,5 +25,5 @@ spec:
       deny:
         conditions:
         - key: "{{ request.object.metadata.annotations.\"pod.kubernetes.io/lifetime\" }}"
-          operator: DurationGreaterThan
+          operator: GreaterThan
           value: "8h"
