--- a/other/prepend_image_registry/patchedResource.yaml
+++ b/other/prepend_image_registry/patchedResource.yaml
@@ -11,6 +11,6 @@ spec:
     image: registry.io/busybox:1.28
   containers:
   - name: nginx
-    image: nginx:1.2.3
+    image: registry.io/nginx:1.2.3
   - name: redis
-    image: redis:latest
+    image: registry.io/redis:latest
