--- a/other/prepend_image_registry/test.yaml
+++ b/other/prepend_image_registry/test.yaml
@@ -8,12 +8,12 @@ results:
   - policy: prepend-registry
     rule: prepend-registry-containers
     resource: mypod
-    patchedResource: patchedResource01.yaml
+    patchedResource: patchedResource.yaml
     kind: Pod
     result: pass
   - policy: prepend-registry
     rule: prepend-registry-initcontainers
     resource: mypod
-    patchedResource: patchedResource02.yaml
+    patchedResource: patchedResource.yaml
     kind: Pod
     result: pass
