change any namespace vars to request.namespace
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/allowed_pod_priorities/allowed_pod_priorities.yaml
+++ b/other/allowed_pod_priorities/allowed_pod_priorities.yaml
@@ -34,12 +34,12 @@ spec:
     validate:
       message: >-
         The Pod PriorityClass {{ request.object.spec.template.spec.priorityClassName }} is not in the list
-        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data.{{request.object.metadata.namespace}} }}.
+        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data.{{request.namespace}} }}.
       deny:
         conditions:
         - key: "{{ request.object.spec.template.spec.priorityClassName }}"
           operator: NotIn
-          value:  "{{ podprioritydict.data.{{request.object.metadata.namespace}} }}"
+          value:  "{{ podprioritydict.data.{{request.namespace}} }}"
   - name: validate-pod-priority-pods
     context:
       - name: podprioritydict
@@ -53,12 +53,12 @@ spec:
     validate:
       message: >-
         The Pod PriorityClass {{ request.object.spec.priorityClassName }} is not in the list
-        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data.{{request.object.metadata.namespace}} }}.
+        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data.{{request.namespace}} }}.
       deny:
         conditions:
         - key: "{{ request.object.spec.priorityClassName }}"
           operator: NotIn
-          value:  "{{ podprioritydict.data.{{request.object.metadata.namespace}} }}"
+          value:  "{{ podprioritydict.data.{{request.namespace}} }}"
   - name: validate-pod-priority-cronjob
     context:
       - name: podprioritydict
@@ -72,9 +72,9 @@ spec:
     validate:
       message: >-
         The Pod PriorityClass {{ request.object.spec.jobTemplate.spec.template.spec.priorityClassName }} is not in the list
-        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data.{{request.object.metadata.namespace}} }}.
+        of the following PriorityClasses allowed in this Namespace: {{ podprioritydict.data.{{request.namespace}} }}.
       deny:
         conditions:
         - key: "{{ request.object.spec.jobTemplate.spec.template.spec.priorityClassName }}"
           operator: NotIn
-          value:  "{{ podprioritydict.data.{{request.object.metadata.namespace}} }}"
+          value:  "{{ podprioritydict.data.{{request.namespace}} }}"
