--- a/other/allowed_pod_priorities/values.yaml
+++ b/other/allowed_pod_priorities/values.yaml
@@ -4,13 +4,12 @@ policies:
       - name: validate-pod-priority-pods
         values:
           podprioritydict.data.default: "[\"high-priority\", \"moderate-priority\", \"low-priority\"]"
-
+          request.namespace: default
       - name: validate-pod-priority
         values:
           podprioritydict.data.default: "[\"high-priority\", \"moderate-priority\", \"low-priority\"]"
-
+          request.namespace: default
       - name: validate-pod-priority-cronjob
         values:
           podprioritydict.data.production: "[\"high-priority\", \"moderate-priority\", \"low-priority\"]"
-
-          
+          request.namespace: production
